# gsoc-2024-dev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  main.cpp  pybind.h  test.cpp  test_main.cpp  test_numpy.cpp  test_numpy.py
.github/workflows/: sync.yml  sync.ymlsss  test.yaml
numpy/: CMakeLists.txt  README.md  numpy.pyi
numpy/include/: numpy.hpp  pocketpy.h
numpy/src/: numpy.cpp
numpy/tests/: test_numpy.cpp  test_numpy.py
pybind11/: Features.md  README.md
pybind11/docs/: cast.md  main.md  object.md
pybind11/include/internal/: builtins.h  cast.h  class.h  cpp_function.h  instance.h  object.h  pytypes.h
pybind11/include/pybind11/: builtins.h  cast.h  class.h  cpp_function.h  instance.h  kernel.h  object.h  operators.h  pybind11.h  stl.h  types.h
pybind11/include/pybind11/internal/: accessor.h  builtins.h  cast.h  class.h  cpp_function.h  error.h  function.h  instance.h  kernel.h  module.h  object.h  type_traits.h  types.h
pybind11/internal/: builtins.h  cast.h  cpp_function.h  kernel.h  object.h  object_impl.h  type_traits.h
pybind11/tests/: builtins.cpp  class.cpp  cpp_function.py  function.cpp  main.cpp  module.cpp  object.cpp  operators.cpp  stl.cpp  test.h  types.cpp
